# arvi_robot

./: CMakeLists.txt  arvi.rviz  arvi.urdf  maestro.yaml  package.xml
arvi_control/: CMakeLists.txt  joystick.yaml  package.xml
arvi_control/launch/: control.launch
arvi_description/: CMakeLists.txt  package.xml
arvi_description/launch/: description.launch  display.launch
arvi_description/urdf/: arvi.urdf.xacro  blades.urdf.xacro  description.xacro  left_truck.urdf.xacro  plate.urdf.xacro  (+3 more)
arvi_navigation/: CMakeLists.txt  package.xml
launch/: double_cam.launch  double_cam.launch~  gui_arvi.launch~  gui_arvi_new.launch~  gui_test.launch~  joy_arvi.launch  joy_arvi.launch~  robot.launch  robot.launch~  test.launch~  web.launch~
ros_arvi_control/: CMakeLists.txt  package.xml
ros_arvi_control/config/: joint_position_control.yaml
ros_arvi_control/launch/: gui_arvi.launch
ros_arvi_description/: CMakeLists.txt  package.xml
ros_arvi_description/launch/: display.launch
ros_arvi_description/meshes/body/: body_part_Link.STL  cover_Link.STL  electronics_body_Link.STL
ros_arvi_description/meshes/left_truck/: left_truck_Link.STL  left_truck_chain_Link.STL
ros_arvi_description/meshes/right_truck/: right_active_sprocket_Link.STL  right_passive_sprocket_Link.STL  right_truck_Link.STL  right_truck_chain_Link.STL
ros_arvi_description/meshes/tilt/: tilt_Link.STL  tilt_camera_Link.STL
ros_arvi_description/rviz/: urdf.rviz
ros_arvi_description/urdf/: arvi.urdf.xacro  left_truck.urdf.xacro  materials.urdf  right_truck.urdf.xacro  tilt.urdf.xacro  truck.urdf.xacro
(+19 files in other folders)
