<?xml version="1.0"?>
<package>
  <name>ros_arvi_control</name>
  <version>0.0.1</version>
  <description>The arvi_robot package</description>

  <maintainer email="bonghi@dis.uniroma1.it">Raffaello Bonghi</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://ros.org/wiki/explorer_robot</url> -->


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_arvi_description</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

</package>
